<resources>
    <string name="app_name">Stuff</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="mensaje_inicial">Enjoy the good things of the life!!!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="sign_up_msj">Upload Photo</string>
    <string name="create_activity">Create activity</string>
    <string name="see_activities">See activities</string>
    <string name="name">Name</string>
    <string name="start_date">Start date</string>
    <string name="finish_date">Finish Date</string>
    <string name="create_assign">Create</string>
    <string name="by">by</string>


</resources>
