<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"  >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name_create"
            android:theme="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:hint="@string/start_date"
            android:id="@+id/start_date_create"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageButton
            android:background="@color/colorAccent"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/picker"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/finish_date"
            android:id="@+id/finish_date_create"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:background="@color/colorAccent"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/picker2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/create_assign"
        android:text="@string/create_assign"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"
        android:layout_marginTop="2dp"
        android:textColor="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
