<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_student_view"
        android:elevation="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_card_student_view"
                android:background="@color/colorPrimary"
                android:src="@android:drawable/ic_dialog_map"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name_student_view"
                    android:text="@string/name"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/start_date_student_view"
                    android:text="@string/start_date"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/finish_date_student_view"
                    android:text="@string/finish_date"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/professor_name_student_view"
                    android:text="@string/by"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/join_btn_student_view"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_input_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>