<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_student"
        android:elevation="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_card_student"
                android:background="@color/colorAccent"
                android:src="@drawable/avatar2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/student_name"
                    android:text="@string/name"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/student_start_date"
                    android:text="@string/start_date"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/student_finish_date"
                    android:text="@string/finish_date"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>